# optimization

./: LinearAlgebra.cpp  Simplex.cpp
Task1/: Simplex.cpp  tests
Task2/: .gitignore  interior-point.cabal  simplex
Task2/app/: InteriorPoint.hs  Main.hs
Task2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Task2/dist-newstyle/packagedb/ghc-9.6.6/: interior-point-0.1.0.0-inplace.conf  package.cache
Task3/: Tests  main.cpp
