cabal-version: 3.0
name: interior-point
version: 0.1.0.0
license: MIT
author: danielambda
maintainer: daniel.gevorgyan25@gmail.com
category: Math
build-type: Custom

common warnings
    ghc-options: -Wall

custom-setup
    setup-depends:
        base ^>=4.18.2.1,
        process ^>=1.6.24.0,
        Cabal,

executable interior-point
    import: warnings
    main-is: Main.hs
    other-modules: InteriorPoint
    build-depends:
        base ^>=4.18.2.1,
        matrix ^>=0.3.6.1,
        vector ^>=0.12.0.1,
        process ^>=1.6.24.0,
    hs-source-dirs: app
    default-language: GHC2021
